Fix justify content on small screen

--- a/style.css
+++ b/style.css
@@ -158,7 +158,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    justify-content: space-between;
   }
   
   .game-title {
